updated HelloFX to work